kubefiles/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: m8p-chat-app-svc
  namespace: jakir007
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: m8p-chat-app-deployment
