kubefiles/ngnix-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: m8p-chat-app-ingress
  namespace: jakir007
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/upgrade: "websocket"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - m8p-chat-app.jakirdev.com
      secretName: m8p-chat-app-cert
  rules:
    - host: m8p-chat-app.jakirdev.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: m8p-chat-app-svc
                port:
                  number: 3000
